--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "psycopg",
         "setuptools",
         "sqlparse",
+        "summernote",
         "tzdata",
         "venv",
         "wsgi"
