--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,17 @@
     "cSpell.words": [
         "asgiref",
         "atlxk",
+        "Codewars",
         "gjib",
         "gunicorn",
         "herokuapp",
+        "nbsp",
         "psycopg",
+        "Pythonic",
+        "Scrumban",
         "setuptools",
         "sqlparse",
+        "stackoverflow",
         "summernote",
         "tzdata",
         "venv",
