--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "asgiref",
         "atlxk",
         "Codewars",
+        "forloop",
         "gjib",
         "gunicorn",
         "herokuapp",
