--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,43 @@
 {
     "cSpell.words": [
+        "adipisicing",
+        "amet",
         "asgiref",
         "atlxk",
         "Codewars",
+        "consectetur",
+        "consequatur",
+        "distinctio",
+        "doloribus",
+        "dolorum",
+        "ducimus",
+        "eaque",
+        "elit",
         "excert",
         "forloop",
         "gjib",
         "gunicorn",
         "herokuapp",
+        "impedit",
+        "ipsam",
+        "iusto",
         "nbsp",
+        "Perferendis",
+        "perspiciatis",
         "psycopg",
         "Pythonic",
+        "quas",
+        "repellat",
         "Scrumban",
+        "sequi",
         "setuptools",
         "sqlparse",
         "stackoverflow",
         "summernote",
         "tzdata",
         "venv",
+        "voluptas",
+        "voluptate",
         "wsgi"
     ]
 }
