--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "adipisicing",
+        "allauth",
         "amet",
         "asgiref",
         "atlxk",
@@ -31,6 +32,7 @@
         "Scrumban",
         "sequi",
         "setuptools",
+        "socialaccount",
         "sqlparse",
         "stackoverflow",
         "summernote",
