--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Codewars",
         "consectetur",
         "consequatur",
+        "customise",
         "distinctio",
         "doloribus",
         "dolorum",
